<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.telegramactivity.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.telegramactivity.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_GetReady"
            app:destination="@id/GetReady" />
    </fragment>
    <fragment
        android:id="@+id/GetReady"
        android:name="com.example.telegramactivity.GetReady"
        android:label="@string/getready_header"
        tools:layout="@layout/fragment_get_ready">
        <action
            android:id="@+id/action_GetReady_to_ActivityFragment"
            app:destination="@id/ActivityFragment" />
    </fragment>
    <fragment
        android:id="@+id/ActivityFragment"
        android:name="com.example.telegramactivity.ActivityFragment"
        android:label="@string/activity_header"
        tools:layout="@layout/fragment_activity">
        <action
            android:id="@+id/action_ActivityFragment_to_PostRatings"
            app:destination="@id/PostRatings" />
    </fragment>
    <fragment
        android:id="@+id/PostRatings"
        android:name="com.example.telegramactivity.PostRatings"
        android:label="@string/post_ratings_header"
        tools:layout="@layout/fragment_post_ratings">
        <action
            android:id="@+id/action_PostRatings_to_Feedback"
            app:destination="@id/Feedback" />
    </fragment>
    <fragment
        android:id="@+id/Feedback"
        android:name="com.example.telegramactivity.Feedback"
        android:label="@string/feedback_header"
        tools:layout="@layout/fragment_feedback">
<!--        <action-->
<!--            android:id="@+id/action_ActivityFragment_to_PostRatings"-->
<!--            app:destination="@id/PostRatings" />-->
    </fragment>

</navigation>